--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<ul>
 				<li class="a1"><a href="./z-index.html">Home</a></li>
-				<li><a href="./cakes2.html">Cakes</a></li>
+				<li><a href="./index.html">Cakes</a></li>
 				<li><a href="./contact us.html">Contact Us</a></li>
 				<li><a href="./Feedback.html">Feedback </a></li>
 				<li><a href="crossreference.html">Cross Reference </a></li>
