--- a/crossreference.html
+++ b/crossreference.html
@@ -147,7 +147,7 @@
 
             </div>
             <ul>
-                <li class="a1"><a href="z-index.html">Home</a></li>
+                <li class="a1"><a href="index.html">Home</a></li>
                 <li><a href="cakes2.html">Cakes</a></li>
                 <li><a href="contact us.html">Contact Us</a></li>
                 <li><a href="Feedback.html">Feedback </a></li>
